--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\Shared\Shared.fs" />
+    <Compile Include="Domain.fs" />
     <Compile Include="Cards.fs" />
     <Compile Include="Server.fs" />
   </ItemGroup>
