--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\Shared\Shared.fs" />
+    <Compile Include="Search.fs" />
+    <Compile Include="About.fs" />
+    <Compile Include="Pages.fs" />
     <Compile Include="Client.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
