Adds version file to render version on client
Adds version to about page
Ugly AF right now, but going to scrap the UI and start over pretty soon

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\Shared\Shared.fs" />
+    <Compile Include="Version.fs" />
     <Compile Include="Search.fs" />
     <Compile Include="About.fs" />
     <Compile Include="Pages.fs" />
